added many things
